# gu-ibdf-batch-verification-rust

./: Cargo.toml  README.md  build.rs  file.txt  file1251.txt
src/: main.rs
