[package]
name = "gu-ibdf-batch-verification-rust"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
winres = "0.1"


[dependencies]
encoding_rs = "0.8.32"
encoding_rs_io = "0.1.7"